--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -147,7 +147,7 @@
                         data-confirm-message="従業員「<%= employee.username %>」の多要素認証をリセットします。よろしいですか？"
                       >
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button type="submit" class="btn secondary">2FAリセット</button>
+                        <button type="submit" class="btn secondary">二段階認証リセット</button>
                       </form>
                     </div>
                   </td>
@@ -191,7 +191,7 @@
                         data-confirm-message="従業員「<%= employee.username %>」の多要素認証をリセットします。よろしいですか？"
                       >
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button type="submit" class="btn">2FAリセット</button>
+                        <button type="submit" class="btn">二段階認証リセット</button>
                       </form>
                     </div>
                   </td>
