--- a/views/login_mfa.ejs
+++ b/views/login_mfa.ejs
@@ -162,7 +162,7 @@
       </div>
 
       <p class="form-note">
-        バックアップコードをすべて使い切った場合は、テナント管理者に連絡し、従業員一覧の「2FAリセット」を実行してもらってから再設定してください。
+        バックアップコードをすべて使い切った場合は、テナント管理者に連絡し、従業員一覧の「二段階認証リセット」を実行してもらってから再設定してください。
       </p>
       <div class="form-links">
         <a class="link" href="/login/mfa/cancel">ログイン画面へ戻る</a>
